poke/testsuite/poke.pkl/cast-void-diag-1.pk
/* { dg-do compile } */

deftype Pac0et = struct { };

defvar x=0 as  void ;  /* { dg-error "not allowed" } */
